plugins {
    id 'org.springframework.boot' version '2.7.9'
    id 'io.spring.dependency-management' version '1.1.0'
    id 'java'
    id 'groovy'
    id 'com.github.ben-manes.versions' version '0.46.0'
}

group = 'no.fintlabs'
sourceCompatibility = '17'

jar {
    enabled = false
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    repositories {
        maven {
            url "https://repo.fintlabs.no/releases"
        }
    }
    mavenLocal()
}


dependencies {
    implementation "no.fint:fint-okonomi-model-java:${apiVersion}"
    implementation "no.fint:fint-okonomi-resource-model-java:${apiVersion}"
    implementation "no.fint:fint-utdanning-resource-model-java:${apiVersion}"
    implementation 'no.fintlabs:fint-resource-server-security:1.1.0'
    implementation 'no.fint:fint-model-resource:0.4.1'
    implementation 'io.netty:netty-resolver-dns-native-macos:4.1.91.Final:osx-aarch_64'
    implementation 'javax.servlet:javax.servlet-api:4.0.1'

    // this one goes!
    // implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'

    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation "org.springframework.boot:spring-boot-starter-data-mongodb"
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'

    implementation 'org.springframework.data:spring-data-commons'
    implementation 'io.micrometer:micrometer-registry-prometheus'
    implementation 'org.projectlombok:lombok:1.18.22'
    implementation 'org.projectlombok:lombok:1.18.22'
    testImplementation 'junit:junit:4.13.1'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    implementation 'org.apache.commons:commons-lang3:3.12.0'
    implementation 'org.jooq:jool-java-8:0.9.15'
    implementation 'commons-beanutils:commons-beanutils:1.9.4'
    implementation 'com.github.ben-manes.caffeine:caffeine'

    // https://mvnrepository.com/artifact/org.apache.poi/poi
    implementation 'org.apache.poi:poi:4.0.0'
    implementation 'org.apache.poi:poi-ooxml:4.0.0'

    implementation 'org.apache.tika:tika-parsers:1.24.1'

    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

    // testImplementation 'no.fint:fint-test-utils:0.0.6'
    testImplementation 'cglib:cglib-nodep:3.3.0'
    testImplementation 'org.spockframework:spock-spring:2.3-groovy-4.0'
    testImplementation 'org.spockframework:spock-core:2.3-groovy-4.0'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-web'
    testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo:3.4.6'
    testImplementation 'io.projectreactor:reactor-test:3.5.5'
    testImplementation 'com.squareup.okhttp3:mockwebserver:4.10.0'
    testImplementation 'com.squareup.okhttp3:okhttp:4.3.1'
}

test {
    useJUnitPlatform()
}